@@ -1,3 +1,10 @@
+2008-12-11  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/properties/bacon-video-widget-properties.c
+	(bacon_video_widget_properties_from_metadata): Fix warnings
+	playing back video from
+	http://bugzilla.gnome.org/show_bug.cgi?id=564053
+
 2008-12-10  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c (playlist_remove_files): Remove
